another try to solve issue #43 / solves problems in MessageBundle(en/de)

--- a/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
+++ b/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
@@ -34,7 +34,7 @@ guiCancelButton = Abbrechen
 guiHelpButton = Hilfe
 guiCheckComplete = LanguageTool-Pr\u00fcfung beendet.
 guiConfigWindowTitle = LanguageTool-Optionen
-guiMenuAbout = \u00dcber…
+guiMenuAbout = \u00dcber\u2026
 guiOOoChangeButton = Korrigieren
 guiOOoChangeAllButton = Alle korrigieren
 guiOOoAutoCorrectButton = Zur Autokorrektur hinzuf\u00fcgen
@@ -55,7 +55,7 @@ guiOOoCheckSpellingButton = Nur Rechtschreibung
 guiOOoCheckGrammarButton = Nur Grammatik
 guiOOoCheckOnlyRuleButton = Einzige Regel
 guiTurnOffRule = Regel deaktivieren
-guiOOoOptionsButton = Optionen…
+guiOOoOptionsButton = Optionen\u2026
 guiOOoCheckDialogName = Dialog zur Rechtschreib- und Grammatikpr\u00fcfung
 guiOOoChangeLanguageRequest = Sprache \u00e4ndern
 # is part of selection: Change Language: Of Match | Of Paragraph
@@ -110,7 +110,7 @@ loMenuAiTranslateCommand = KI: \u00dcbersetze Dokument
 loMenuAiTextToSpeechCommand = KI: Dokument zu Sprache
 loMenuAiGeneralCommandTitle = Anweisungseingabe
 loMenuAiGeneralCommandMessage = Geben Sie einen beliebigen Befehl ein, um den Absatz zu bearbeiten
-loAiWaitDialogTitle = Bitte warten
+loAiWaitDialogTitle = Bitte warten\u2026
 loAiWaitDialogMessage = Bitte warten Sie, bis die KI Ihre Anfrage bearbeitet hat.\nDies kann je nach Arbeitslast einige Zeit in Anspruch nehmen.
 loAiRuleDescription = KI Fehler Erkennung
 loAiRuleMessage = Die KI schl\u00e4gt folgende Korrektur vor
@@ -160,7 +160,7 @@ loAiDialogTranslateButton = \u00dcbersetzen
 loAiDialogTranslateFreedom = Freiheit der \u00dcbersetzung
 
 guiUColorStyleLabel = Farbe und Stil f\u00fcr Unterstreichungen:
-guiUColorChange = \u00c4ndern…
+guiUColorChange = \u00c4ndern\u2026
 guiUColorDefault = Standard
 guiUColorDialogHeader = Farbe w\u00e4hlen
 guiUTypeWave = Welle
@@ -196,8 +196,8 @@ pt-BR = Portugiesisch (Brasilien, nach Reform)
 pt-MZ = Portugiesisch (Mosambik, vor Reform)
 pt-PT = Portugiesisch (Portugal, vor Reform)
 ja = Japanisch
-language_not_supported = Fehler: Die Dokumentsprache "{0}" wird von LanguageTool nicht unterst\u00fctzt.
-guiMore = Mehr
+language_not_supported = Fehler: Die Dokumentsprache \u201e{0}\u201c wird von LanguageTool nicht unterst\u00fctzt.
+guiMore = Mehr\u2026
 guiUndo = R\u00fcckg\u00e4ngig
 ruleDetailsLink = Mehr zur Regel auf community.languagetool.org
 ta = Tamil
@@ -225,19 +225,19 @@ loContextMenuDeactivateRule = Regel deaktivieren
 loContextMenuIgnorePermanent = Dauerhaft ignorieren
 loContextMenuActivateRule = Regel aktivieren
 loContextMenuAddToDictionary = Zum W\u00f6rterbuch hinzuf\u00fcgen
-loContextMenuGrammarCheck = Grammatikpr\u00fcfung…
+loContextMenuGrammarCheck = Grammatikpr\u00fcfung\u2026
 loContextMenuGrammarCheckAgain = Grammatik erneut pr\u00fcfen
 loContextMenuRefreshCheck = Pr\u00fcfergebnisse aktualisieren
 loContextMenuAbout = \u00dcber
 loContextMenuNextError = N\u00e4chster Fehler
-loDialogLanguageHelp = Die Sprache des im Editor-Element angezeigten Absatzes wird angezeigt.\nWenn Sie die Sprache des unterstrichenen Fehlers oder des gesamten Absatzes \u00e4ndern m\u00f6chten, w\u00e4hlen Sie zun\u00e4chst die neue Sprache aus.\nNachdem eine neue Sprache ausgew\u00e4hlt wurde, wird die Schaltfl\u00e4che "Sprache \u00e4ndern" aktiviert.
+loDialogLanguageHelp = Die Sprache des im Editor-Element angezeigten Absatzes wird angezeigt.\nWenn Sie die Sprache des unterstrichenen Fehlers oder des gesamten Absatzes \u00e4ndern m\u00f6chten, w\u00e4hlen Sie zun\u00e4chst die neue Sprache aus.\nNachdem eine neue Sprache ausgew\u00e4hlt wurde, wird die Schaltfl\u00e4che \u201eSprache \u00e4ndern\u201c aktiviert.
 loDialogChangeLanguageHelp = Die Liste wird aktiviert, nachdem eine neue Sprache ausgew\u00e4hlt wurde. \nKlicken Sie auf die Liste, um zu w\u00e4hlen: \n - die Sprache der \u00dcbereinstimmung zu \u00e4ndern (im Editor-Element unterstrichen) \n - den gesamten Absatz
 loDialogMatchDescriptionHelp = Zeigt eine Beschreibung des von der Pr\u00fcfung gefundenen Fehlers.
-loDialogMatchParagraphHelp = Anzeige des Absatzes, in dem der Fehler gefunden wurde. Der m\u00f6gliche Fehler wird unterstrichen und in der definierten Farbe angezeigt (Rechtschreibfehler: rot, Grammatikfehler: blau, stilistische Fehler: gr\u00fcn, Farben k\u00f6nnen vom Nutzer im LT-Optionsdialog definiert werden).\nDer Absatz kann vom Nutzer bearbeitet werden.\nDr\u00fccken Sie nach der Bearbeitung die Schaltfl\u00e4che "\u00c4ndern", um den Text des Dokuments zu \u00e4ndern.
-loDialogSuggestionsHelp = Die Liste der Vorschl\u00e4ge f\u00fcr den Fehler wird angezeigt.\n- W\u00e4hlen Sie einen Vorschlag aus und dr\u00fccken Sie die Schaltfl\u00e4che "\u00c4ndern", um den unterstrichenen Fehler durch den ausgew\u00e4hlten Vorschlag zu ersetzen.\nHinweis: Wenn Sie den Text im Editor-Element ge\u00e4ndert haben, wird der ge\u00e4nderte Text im Dokument anstelle des Vorschlags ersetzt.
+loDialogMatchParagraphHelp = Anzeige des Absatzes, in dem der Fehler gefunden wurde. Der m\u00f6gliche Fehler wird unterstrichen und in der definierten Farbe angezeigt (Rechtschreibfehler: rot, Grammatikfehler: blau, stilistische Fehler: gr\u00fcn, Farben k\u00f6nnen vom Nutzer im LT-Optionsdialog definiert werden).\nDer Absatz kann vom Nutzer bearbeitet werden.\nDr\u00fccken Sie nach der Bearbeitung die Schaltfl\u00e4che \u201e\u00c4ndern\u201c, um den Text des Dokuments zu \u00e4ndern.
+loDialogSuggestionsHelp = Die Liste der Vorschl\u00e4ge f\u00fcr den Fehler wird angezeigt.\n- W\u00e4hlen Sie einen Vorschlag aus und dr\u00fccken Sie die Schaltfl\u00e4che \u201e\u00c4ndern\u201c, um den unterstrichenen Fehler durch den ausgew\u00e4hlten Vorschlag zu ersetzen.\nHinweis: Wenn Sie den Text im Editor-Element ge\u00e4ndert haben, wird der ge\u00e4nderte Text im Dokument anstelle des Vorschlags ersetzt.
 loDialogCheckTypeHelp = Ausw\u00e4hlen, was gepr\u00fcft werden soll:\n- nur Rechtschreibung\n- nur Grammatik (und Stil)\n- alles (Rechtschreibung, Grammatik, Stil)
 loDialogHelpButtonHelp = \u00d6ffnet den Hilfe-Dialog
-loDialogOptionsButtonHelp = \u00d6ffnet die LT-Optionen.\nDie Optionen k\u00f6nnen vom Nutzer ge\u00e4ndert und durch Klicken auf die Schaltfl\u00e4che "OK" des Dialogs gespeichert werden.
+loDialogOptionsButtonHelp = \u00d6ffnet die LT-Optionen.\nDie Optionen k\u00f6nnen vom Nutzer ge\u00e4ndert und durch Klicken auf die Schaltfl\u00e4che \u201eOK\u201c des Dialogs gespeichert werden.
 loDialogUndoButtonHelp = Macht die letzte Aktion r\u00fcckg\u00e4ngig.\nBis zu 20 Aktionen k\u00f6nnen r\u00fcckg\u00e4ngig gemacht werden.
 loDialogCloseButtonHelp = Schlie\u00dft den Pr\u00fcfdialog.
 loDialogMoreButtonHelp = Nur f\u00fcr Grammatikfehler:\n \u00d6ffnet den Link im Browser, um mehr Informationen anzuzeigen.
@@ -259,12 +259,12 @@ loCheckStatusInitialization = Initialisierung
 loCheckStatusCheck = Pr\u00fcfung
 loLabelCheckProgress = Gepr\u00fcfter Text:
 loBusyMessage = LibreOffice ist besch\u00e4ftigt. \nBitte versuchen Sie es sp\u00e4ter.
-loWaitMessage = Initialisierung des Dialogs. \nBitte warten.
+loWaitMessage = Initialisierung des Dialogs. \nBitte warten\u2026
 loExtHeapMessage = Speicherlimit f\u00fcr LanguageTool erreicht. Es wird in den Absatzmodus gewechselt, sodass einige Regeln, die Fehler \u00fcber Absatzgrenzen finden, nicht funktionieren werden.
 loExtSwitchOffMessage = LanguageTool ist ausgeschaltet. Schalten Sie es an, um diese Funktion zu nutzen.
 loDialogUnsupported = Die Grammatikpr\u00fcfung unterst\u00fctzt keine enthaltenen Objekte wie Grafiken, Bilder oder Textobjekte.\nBitte setzen Sie den Cursor in den Text und starten Sie den Dialog erneut.
 loNextErrorUnsupported = Die Grammatikpr\u00fcfung unterst\u00fctzt keine enthaltenen Objekte wie Grafiken, Bilder oder Textobjekte.\nBitte setzen Sie den Cursor in den Text und suchen Sie erneut nach dem n\u00e4chsten Fehler.
-loNoGrammarCheckWarning = Es scheint, dass die automatische Grammatikpr\u00fcfung deaktiviert ist. Bitte aktivieren Sie "Grammatik w\u00e4hrend der Eingabe pr\u00fcfen" unter "Extras / Optionen / Spracheinstellungen / Linguistik" und starten Sie LibreOffice/OpenOffice neu.
+loNoGrammarCheckWarning = Es scheint, dass die automatische Grammatikpr\u00fcfung deaktiviert ist. Bitte aktivieren Sie \u201eGrammatik w\u00e4hrend der Eingabe pr\u00fcfen\u201c unter \u201eExtras / Optionen / Spracheinstellungen / Linguistik\u201c und starten Sie LibreOffice/OpenOffice neu.
 loAboutLtDesc = Ihr Schreibassistent
 loCopyToClipBoardDesc = In die Zwischenablage kopieren
 loOpenLogFolderDesc = Log-Ordner \u00f6ffnen
