--- a/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
+++ b/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
@@ -34,7 +34,7 @@ guiCancelButton = Cancel
 guiHelpButton = Help
 guiCheckComplete = LanguageTool check is complete.
 guiConfigWindowTitle = LanguageTool Options
-guiMenuAbout = &About…
+guiMenuAbout = &About\u2026
 guiOOoChangeButton = Correct
 guiOOoChangeAllButton = Correct All
 guiOOoAutoCorrectButton = Add to AutoCorrect
@@ -55,7 +55,7 @@ guiOOoCheckSpellingButton = Only Spelling
 guiOOoCheckGrammarButton = Only Grammar
 guiOOoCheckOnlyRuleButton = Only Rule
 guiTurnOffRule = Turn off Rule
-guiOOoOptionsButton = Options…
+guiOOoOptionsButton = Options\u2026
 guiOOoCheckDialogName = Spell and Grammar Check Dialog
 guiOOoChangeLanguageRequest = Change Language
 # is part of selection: Change Language: Of Match | Of Paragraph
@@ -108,7 +108,7 @@ loMenuAiTranslateCommand = AI: Translate document
 loMenuAiTextToSpeechCommand = AI: document to speech
 loMenuAiGeneralCommandTitle = Command input
 loMenuAiGeneralCommandMessage = Enter any command to manipulate the paragraph
-loAiWaitDialogTitle = Please wait…
+loAiWaitDialogTitle = Please wait\u2026
 loAiWaitDialogMessage = Please wait until the AI has completed your request.\nThis may take some time depending on the workload.
 loAiRuleDescription = AI error detection
 loAiRuleMessage = The AI suggests the following correction
@@ -128,7 +128,7 @@ loAiDialogResultLabelGrammar = AI: Grammatically revised text
 loAiDialogResultLabelStyle = AI: Stylistically revised text
 loAiDialogResultLabelRephrase = AI: Reformulated text
 loAiDialogResultLabelExpand = AI: Expanded text
-loAiDialogCreativityLabel = AI Creativity (temperature × 100)
+loAiDialogCreativityLabel = AI Creativity (temperature * 100)
 loAiDialogExecuteButton = Execute instruction
 loAiDialogcopyResultButton = Copy Result
 loAiDialogResetButton = Reset
@@ -194,8 +194,8 @@ pt-BR = Portuguese (Brazil posAO)
 pt-MZ = Portuguese (Mozambique preAO)
 pt-PT = Portuguese (Portugal posAO)
 ja = Japanese
-language_not_supported = Error: Sorry, the document language “{0}” is not supported by LanguageTool.
-guiMore = More…
+language_not_supported = Error: Sorry, the document language \u201c{0}\u201d is not supported by LanguageTool.
+guiMore = More\u2026
 guiUndo = Undo
 ruleDetailsLink = Rule details on community.languagetool.org
 ta = Tamil
@@ -209,7 +209,7 @@ sr-HR = Serbian (Croatia)
 sr-ME = Serbian (Montenegro)
 loRemoteSwitchToLocal = Connection refused:\nSwitch to internal LanguageTool application
 loRemoteInfoDefaultServer = The extension will check your text by sending it to LanguageTool.org over an encrypted connection. Your text will not be stored.
-loRemoteInfoOtherServer = The extension will check your text by sending it to the remote server “{0}”. Contact the server administrator for information about privacy protection.
+loRemoteInfoOtherServer = The extension will check your text by sending it to the remote server \u201c{0}\u201d. Contact the server administrator for information about privacy protection.
 loMenuRemoteInfo = Remote Check Hint
 loMenuResetIgnorePermanent = Reset Ignore Permanent
 loMenuEnableBackgroundCheck = Enable background check
@@ -222,18 +222,18 @@ loContextMenuDeactivateRule = Deactivate Rule
 loContextMenuIgnorePermanent = Ignore Permanent
 loContextMenuActivateRule = Activate Rule
 loContextMenuAddToDictionary = Add to Dictionary
-loContextMenuGrammarCheck = Grammar Check…
+loContextMenuGrammarCheck = Grammar Check\u2026
 loContextMenuGrammarCheckAgain = Grammar Check again
 loContextMenuRefreshCheck = Refresh Check Results
 loContextMenuAbout = About
-loDialogLanguageHelp = The language of the paragraph shown in the editor element is displayed.\nIf you want to change the language of the underlined match or the whole paragraph, choose the new language first.\nAfter a new language is selected the “Change Language” button will be activated.
+loDialogLanguageHelp = The language of the paragraph shown in the editor element is displayed.\nIf you want to change the language of the underlined match or the whole paragraph, choose the new language first.\nAfter a new language is selected the \u201cChange Language\u201d button will be activated.
 loDialogChangeLanguageHelp = The list is activated, after a new language was selected.\nClick on the list to choose:\n- change the language of the match (underlined in the editor element)\n- the whole paragraph
 loDialogMatchDescriptionHelp = Gives a description of the possible error found by the spell or grammar checker.
-loDialogMatchParagraphHelp = Display the paragraph in which the match was found. The possible error is underlined and displayed in the defined color (spelling errors: red, grammatical errors: blue, stylistic errors: green, colors can be defined by the user in the LT option dialog).\nThe paragraph can be edited by the user.\nPress the “Change” button after editing to change the text of the document.
-loDialogSuggestionsHelp = The list of suggestions for the match is displayed.\n- Select a suggestion and press the “Change” button to replace the underlined match by the selected suggestion.\nHint: If you had changed the text in the editor element, the changed text will be replaced inside the document instead of the suggestion.
+loDialogMatchParagraphHelp = Display the paragraph in which the match was found. The possible error is underlined and displayed in the defined color (spelling errors: red, grammatical errors: blue, stylistic errors: green, colors can be defined by the user in the LT option dialog).\nThe paragraph can be edited by the user.\nPress the \u201cChange\u201d button after editing to change the text of the document.
+loDialogSuggestionsHelp = The list of suggestions for the match is displayed.\n- Select a suggestion and press the \u201cChange\u201d button to replace the underlined match by the selected suggestion.\nHint: If you had changed the text in the editor element, the changed text will be replaced inside the document instead of the suggestion.
 loDialogCheckTypeHelp = Select to check:\n- only spelling\n- only grammar (and style)\n- all (spelling, grammar and style)
 loDialogHelpButtonHelp = Opens the help dialog
-loDialogOptionsButtonHelp = Opens the LT options dialog.\nThe Options can be changed by the user and saved by clicking the “OK” button of the dialog.
+loDialogOptionsButtonHelp = Opens the LT options dialog.\nThe Options can be changed by the user and saved by clicking the \u201cOK\u201d button of the dialog.
 loDialogUndoButtonHelp = Undoes the last action.\nUp to 20 actions can be undone.
 loDialogCloseButtonHelp = Closes the spell and grammar check dialog.
 loDialogMoreButtonHelp = For grammatical errors only:\nOpens a link in a browser to get advanced information about the error.
@@ -255,12 +255,12 @@ loCheckStatusInitialization = Initialization
 loCheckStatusCheck = Check
 loLabelCheckProgress = Checked text:
 loBusyMessage = LibreOffice is busy.\nPlease try later.
-loWaitMessage = Initializing dialog.\nPlease wait…
+loWaitMessage = Initializing dialog.\nPlease wait\u2026
 loExtHeapMessage = LanguageTool memory limit reached. Switching to one paragraph mode. Some text-level rules will not work properly.
 loExtSwitchOffMessage = LanguageTool is switched off. Please switch it on to run this function.
 loDialogUnsupported = Grammar check doesn't support included Objects like graphics, pictures or text objects.\nPlease place the cursor into the text and start the dialog again.
 loNextErrorUnsupported = Grammar check doesn't support included Objects like graphics, pictures or text objects.\nPlease place the cursor into the text and search for next Error again.
-loNoGrammarCheckWarning = It seems the automatic grammar check is disabled. Please enable “Check grammar as you type” at “Tools” → “Options” → “Language Settings” → “Writing Aids” and restart LibreOffice/OpenOffice.
+loNoGrammarCheckWarning = It seems the automatic grammar check is disabled. Please enable \u201cCheck grammar as you type\u201d at \u201cTools / Options / Language Settings / Writing Aids\u201d and restart LibreOffice/OpenOffice.
 loAboutLtDesc = Your writing assistant
 loCopyToClipBoardDesc = Copy to Clipboard
 loOpenLogFolderDesc = Open log folder
