--- a/src/main/resources/org/writingtool/hu/MessagesBundle_hu.properties
+++ b/src/main/resources/org/writingtool/hu/MessagesBundle_hu.properties
@@ -34,7 +34,7 @@ guiCancelButton = Mégse
 guiHelpButton = Súgó
 guiCheckComplete = A Nyelveszköz ellenőrzése befejeződött.
 guiConfigWindowTitle = A Nyelveszköz beállításai
-guiMenuAbout = &Névjegy…
+guiMenuAbout = &Névjegy\u2026
 guiOOoChangeButton = Kijavítás
 guiOOoChangeAllButton = Minden kijavítása
 guiOOoAutoCorrectButton = Hozzáadás az Automatikus javításhoz
@@ -55,7 +55,7 @@ guiOOoCheckSpellingButton = Only Spelling
 guiOOoCheckGrammarButton = Csak nyelvtan
 guiOOoCheckOnlyRuleButton = Csak szabály
 guiTurnOffRule = Szabály kikapcsolása
-guiOOoOptionsButton = Beállítások…
+guiOOoOptionsButton = Beállítások\u2026
 guiOOoCheckDialogName = Helyesírás- és nyelvhelyesség-ellenőrző párbeszédpanel
 guiOOoChangeLanguageRequest = Nyelv módosítása
 # is part of selection: Change Language: Of Match | Of Paragraph
@@ -108,7 +108,7 @@ loMenuAiTranslateCommand = Mesterséges intelligencia: Dokumentum fordítása
 loMenuAiTextToSpeechCommand = Mesterséges intelligencia: Dokumentum beszédbe alakítása
 loMenuAiGeneralCommandTitle = Parancsbevitel
 loMenuAiGeneralCommandMessage = Bármilyen parancs beírása a bekezdés módosításához
-loAiWaitDialogTitle = Kérjük, várjon…
+loAiWaitDialogTitle = Kérjük, várjon\u2026
 loAiWaitDialogMessage = Kérjük, várja meg, amíg a mesterséges intelligencia végrehajtja a kérését.\nEz a munkaterheléstől függően eltarthat egy ideig.
 loAiRuleDescription = Mesterséges intelligencia hiba észlelése
 loAiRuleMessage = A mesterséges intelligencia a következő javítást javasolja
@@ -195,7 +195,7 @@ pt-MZ = portugál (Mozambik preAO)
 pt-PT = portugál (Portugal posAO)
 ja = japán
 language_not_supported = Hiba: Sajnáljuk, a(z) "{0}" dokumentum nyelvét a Nyelveszköz nem támogatja.
-guiMore = Több…
+guiMore = Több\u2026
 guiUndo = Visszavonás
 ruleDetailsLink = A szabályok részletei a community.languagetool.org oldalon
 ta = tamil
@@ -222,7 +222,7 @@ loContextMenuDeactivateRule = Szabály kikapcsolása
 loContextMenuIgnorePermanent = Az állandó figyelmen kívül hagyása
 loContextMenuActivateRule = Szabály aktiválása
 loContextMenuAddToDictionary = Hozzáadás a szótárhoz
-loContextMenuGrammarCheck = Nyelvtani ellenőrzés…
+loContextMenuGrammarCheck = Nyelvtani ellenőrzés\u2026
 loContextMenuGrammarCheckAgain = Grammar Check again
 loContextMenuRefreshCheck = Eredmények ellenőrzések frissítése
 loContextMenuAbout = Névjegy
