options technical settings update

--- a/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
+++ b/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
@@ -78,6 +78,10 @@ guiCustomColorStyle = Stilregeln
 guiCustomColorOptional = Optionale Regeln
 guiUseLongMessages = Zeige lange Nachrichten in Kontextmen\u00fc
 guiSpellCheckerWarning = Heap-Speicherplatz zu klein: Die LanguageTool-Rechtschreibpr\u00fcfung wird nicht verwendet.\nSetzen Sie den Heap-Speicherplatz auf mindestens 1024 MB, um die LanguageTool-Rechtschreibpr\u00fcfung zu verwenden.
+guiUseLocaleComputer = Lokalen Rechner zur Textpr\u00fcfung nutzen
+guiUseLtServer = Nutze Standard-LanguageTool-Server
+guiUseOtherServer = Nutze anderen Server
+guiSaveCacheToFile = Cache in Datei zwischenspeichern
 guiAiSupportSettings = KI Unterst\u00fctzung
 guiUseAiSupport = Nutze KI Unterst\u00fctzung
 guiAiUrl = KI Server URL
