--- a/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
+++ b/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
@@ -77,6 +77,9 @@ guiCustomColorStyle = Style rules
 guiCustomColorOptional = Optional rules
 guiUseLongMessages = Show long messages in context menu
 guiSpellCheckerWarning = Heap space too small: LanguageTool spell checker is not used.\nSet the heap space to at least 1024 MB to use the LanguageTool spell checker
+guiUseLocaleComputer = Use local computer for text checking
+guiUseLtServer = Use default LanguageTool server
+guiUseOtherServer = Use other server
 guiAiSupportSettings = AI Support Settings
 guiUseAiSupport = Use AI Support
 guiAiUrl = AI Server URL
