--- a/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
+++ b/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
@@ -78,6 +78,7 @@ guiCustomColorOptional = Optional rules
 guiUseLongMessages = Show long messages in context menu
 guiSpellCheckerWarning = Heap space too small: LanguageTool spell checker is not used.\nSet the heap space to at least 1024 MB to use the LanguageTool spell checker
 guiUseLocaleComputer = Use local computer for text checking
+guiTwoThreads = Use two cores (for sentence check and text check)
 guiUseLtServer = Use default LanguageTool server
 guiUseOtherServer = Use other server
 guiAiSupportSettings = AI Support Settings
