add permanent ignore matches in paragraph or range

--- a/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
+++ b/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
@@ -218,6 +218,8 @@ loRemoteSwitchToLocal = Verbindung abgelehnt:\nZum internen LanguageTool wechsel
 loRemoteInfoDefaultServer = Diese Erweiterung wird Ihren Text pr\u00fcfen, indem sie ihn \u00fcber eine verschl\u00fcsselte Verbindung an languagetool.org \u00fcbertr\u00e4gt. Ihr Text wird dabei nicht gespeichert.
 loRemoteInfoOtherServer = Diese Erweiterung wird Ihren Text pr\u00fcfen, indem sie ihn an {0} \u00fcbertr\u00e4gt. Fragen Sie den Betreiber dieses Servers zu den Datenschutzrichtlinien.
 loMenuRemoteInfo = Hinweis zu externer Pr\u00fcfung
+loMenuPermanentIgnoreParagraph = Absatz dauerhaft ignorieren
+loMenuPermanentIgnoreRange = Ausgew\u00e4hlten Bereich dauerhaft ignorieren
 loMenuResetIgnorePermanent = Dauerhaft ignorieren zur\u00fccksetzen
 loMenuEnableBackgroundCheck = Hintergrundpr\u00fcfung einschalten
 loMenuDisableBackgroundCheck = Hintergrundpr\u00fcfung ausschalten
