--- a/src/main/resources/org/writingtool/hu/MessagesBundle_hu.properties
+++ b/src/main/resources/org/writingtool/hu/MessagesBundle_hu.properties
@@ -211,6 +211,8 @@ loRemoteSwitchToLocal = A csatlakozás megtagadva:\nVáltás belső Nyelveszköz
 loRemoteInfoDefaultServer = A kiterjesztés úgy ellenőrzi a szöveget, hogy titkosított kapcsolaton keresztül elküldi a LanguageTool.org webhelyre. A szöveg nem kerül tárolásra.
 loRemoteInfoOtherServer = A bővítmény ellenőrzi a szöveget úgy, hogy elküldi azt a távoli "{0}" kiszolgálóra. Az adatvédelemmel kapcsolatos információkért forduljon a kiszolgáló rendszergazdájához.
 loMenuRemoteInfo = Távoli ellenőrzési tipp
+loMenuPermanentIgnoreParagraph = Permanently ignore paragraph
+loMenuPermanentIgnoreRange = Permanently ignore selected range
 loMenuResetIgnorePermanent = A figyelmen kívül hagyás végleges visszaállítása
 loMenuEnableBackgroundCheck = Háttérellenőrzés engedélyezése
 loMenuDisableBackgroundCheck = Háttérellenőrzés letiltása
