--- a/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
+++ b/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
@@ -215,6 +215,8 @@ loRemoteSwitchToLocal = Connection refused:\nSwitch to internal LanguageTool app
 loRemoteInfoDefaultServer = The extension will check your text by sending it to LanguageTool.org over an encrypted connection. Your text will not be stored.
 loRemoteInfoOtherServer = The extension will check your text by sending it to the remote server \u201c{0}\u201d. Contact the server administrator for information about privacy protection.
 loMenuRemoteInfo = Remote Check Hint
+loMenuPermanentIgnoreParagraph = Permanently ignore paragraph
+loMenuPermanentIgnoreRange = Permanently ignore selected range
 loMenuResetIgnorePermanent = Reset Ignore Permanent
 loMenuEnableBackgroundCheck = Enable background check
 loMenuDisableBackgroundCheck = Disable background check
