Function AI summary added

--- a/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
+++ b/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
@@ -111,6 +111,7 @@ loMenuAiGeneralCommand = KI: Allgemeine Absatz \u00c4nderungen
 loMenuAiStyleCommand = KI: \u00dcberarbeite Absatz stilistisch
 loMenuAiReformulateCommand = KI: Formuliere Absatz um
 loMenuAiExpandCommand = KI: Erweitere Absatz
+loMenuAiSummaryCommand = KI: Erzeuge Zusammenfassung
 loMenuAiTranslateCommand = KI: \u00dcbersetze Dokument
 loMenuAiTextToSpeechCommand = KI: Dokument zu Sprache
 loMenuAiGeneralCommandTitle = Anweisungseingabe
@@ -135,6 +136,9 @@ loAiDialogResultLabelGrammar = KI: grammatisch überarbeiteter Text
 loAiDialogResultLabelStyle = KI: stilistisch überarbeiteter Text
 loAiDialogResultLabelRephrase = KI: umformulierter Text
 loAiDialogResultLabelExpand = KI: erweiteter Text
+loAiDialogResultLabelSummary = KI: Zusammenfassung
+loAiDialogChapterLabel = Kapitel
+loAiDialogDocument = Dokument
 loAiDialogCreativityLabel = KI Kreativit\u00e4t (temperature * 100)
 loAiDialogExecuteButton = F\u00fchre Anweisung aus
 loAiDialogcopyResultButton = Kopiere Ergebnis
@@ -146,6 +150,7 @@ loAiDialogOverrideButton = Absatz \u00fcberschreiben
 loAiDialogaddToButton = Zu Absatz hinzuf\u00fcgen
 loAiDialogHelpButton = Hilfe
 loAiDialogCloseButton = Schlie\u00dfen
+loAiDialogAddSummaryButton = Zusammenfassung hinzuf\u00fcgen
 loAiDialogImgExcludeLabel = Ausschlie\u00dfen
 loAiDialogImgImageLabel = Bild
 loAiDialogImgStepLabel = Schritt
