--- a/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
+++ b/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
@@ -109,6 +109,7 @@ loMenuAiStyleCommand = AI: Revise paragraph stylistically
 loMenuAiReformulateCommand = AI: Reformulate paragraph
 loMenuAiExpandCommand = AI: Expand paragraph
 loMenuAiTranslateCommand = AI: Translate document
+loMenuAiSummaryCommand = AI: Summarize
 loMenuAiTextToSpeechCommand = AI: document to speech
 loMenuAiGeneralCommandTitle = Command input
 loMenuAiGeneralCommandMessage = Enter any command to manipulate the paragraph
@@ -132,6 +133,9 @@ loAiDialogResultLabelGrammar = AI: Grammatically revised text
 loAiDialogResultLabelStyle = AI: Stylistically revised text
 loAiDialogResultLabelRephrase = AI: Reformulated text
 loAiDialogResultLabelExpand = AI: Expanded text
+loAiDialogResultLabelSummary = AI: Summary
+loAiDialogChapterLabel = Chapters
+loAiDialogDocument = Document
 loAiDialogCreativityLabel = AI Creativity (temperature * 100)
 loAiDialogExecuteButton = Execute instruction
 loAiDialogcopyResultButton = Copy Result
@@ -143,6 +147,7 @@ loAiDialogOverrideButton = Override Paragraph
 loAiDialogaddToButton = Add to Paragraph
 loAiDialogHelpButton = Help
 loAiDialogCloseButton = Close
+loAiDialogAddSummaryButton = Add Summary
 loAiDialogImgExcludeLabel = Exclude
 loAiDialogImgImageLabel = Image
 loAiDialogImgStepLabel = Step
