--- a/src/main/resources/org/writingtool/hu/MessagesBundle_hu.properties
+++ b/src/main/resources/org/writingtool/hu/MessagesBundle_hu.properties
@@ -104,6 +104,7 @@ loMenuAiGeneralCommand = Mesterséges intelligencia: Általános bekezdésmódos
 loMenuAiStyleCommand = Mesterséges intelligencia: Bekezdés stilisztikai átdolgozása
 loMenuAiReformulateCommand = Mesterséges intelligencia: Bekezdés újrafogalmazása
 loMenuAiExpandCommand = Mesterséges intelligencia: Bekezdés kibontása
+loMenuAiSummaryCommand = AI: Summarize
 loMenuAiTranslateCommand = Mesterséges intelligencia: Dokumentum fordítása
 loMenuAiTextToSpeechCommand = Mesterséges intelligencia: Dokumentum beszédbe alakítása
 loMenuAiGeneralCommandTitle = Parancsbevitel
@@ -128,6 +129,9 @@ loAiDialogResultLabelGrammar = AI: Grammatically revised text
 loAiDialogResultLabelStyle = AI: Stylistically revised text
 loAiDialogResultLabelRephrase = AI: Reformulated text
 loAiDialogResultLabelExpand = AI: Expanded text
+loAiDialogResultLabelSummary = AI: Summary
+loAiDialogChapterLabel = Chapters
+loAiDialogDocument = Document
 loAiDialogCreativityLabel = Mesterséges intelligencia kreativitás (hőmérséklet × 100)
 loAiDialogExecuteButton = Utasítás végrehajtása
 loAiDialogcopyResultButton = Eredmény másolása
@@ -139,6 +143,7 @@ loAiDialogOverrideButton = Bekezdés felülbírálása
 loAiDialogaddToButton = Hozzáadás a bekezdéshez
 loAiDialogHelpButton = Súgó
 loAiDialogCloseButton = Bezárás
+loAiDialogAddSummaryButton = Add Summary
 loAiDialogImgExcludeLabel = Kizárás
 loAiDialogImgImageLabel = Kép
 loAiDialogImgStepLabel = Lépés
