--- a/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
+++ b/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
@@ -80,6 +80,7 @@ guiUseLongMessages = Zeige lange Nachrichten in Kontextmen\u00fc
 guiSpellCheckerWarning = Heap-Speicherplatz zu klein: Die LanguageTool-Rechtschreibpr\u00fcfung wird nicht verwendet.\nSetzen Sie den Heap-Speicherplatz auf mindestens 1024 MB, um die LanguageTool-Rechtschreibpr\u00fcfung zu verwenden.
 guiUseLocaleComputer = Lokalen Rechner zur Textpr\u00fcfung nutzen
 guiTwoThreads = Nutze zwei Kerne (f\u00fcr Satz- und Textpr\u00fcfung)
+guiMultiThread = Mehrere Kerne verwenden (schneller, aber hohe CPU-Auslastung)
 guiUseLtServer = Nutze Standard-LanguageTool-Server
 guiUseOtherServer = Nutze anderen Server
 guiSaveCacheToFile = Cache in Datei zwischenspeichern
