--- a/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
+++ b/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
@@ -79,6 +79,7 @@ guiUseLongMessages = Show long messages in context menu
 guiSpellCheckerWarning = Heap space too small: LanguageTool spell checker is not used.\nSet the heap space to at least 1024 MB to use the LanguageTool spell checker
 guiUseLocaleComputer = Use local computer for text checking
 guiTwoThreads = Use two cores (for sentence check and text check)
+guiMultiThread = Use multiple cores (faster but high CPU load)
 guiUseLtServer = Use default LanguageTool server
 guiUseOtherServer = Use other server
 guiAiSupportSettings = AI Support Settings
