--- a/src/main/resources/org/writingtool/hu/MessagesBundle_hu.properties
+++ b/src/main/resources/org/writingtool/hu/MessagesBundle_hu.properties
@@ -77,6 +77,11 @@ guiCustomColorStyle = Stílusszabályok
 guiCustomColorOptional = Választható szabályok
 guiUseLongMessages = Hosszú üzenetek megjelenítése a helyi menüben
 guiSpellCheckerWarning = A halomterület túl kicsi: A Nyelveszköz helyesírás-ellenőrző nincs használva.\nA Nyelveszköz helyesírás-ellenőrző használatához állítsa a kupacterületet legalább 1024 MB-ra.
+guiUseLocaleComputer = Use local computer for text checking
+guiTwoThreads = Use two cores (for sentence check and text check)
+guiMultiThread = Use multiple cores (faster but high CPU load)
+guiUseLtServer = Use default LanguageTool server
+guiUseOtherServer = Use other server
 guiAiSupportSettings = AI-támogatás beállításai
 guiUseAiSupport = AI-támogatás használata
 guiAiUrl = AI-kiszolgáló URL-címe
