AI: generate synonyms for words

--- a/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
+++ b/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
@@ -112,13 +112,14 @@ loMenuAiGeneralCommand = KI: Allgemeine Absatz \u00c4nderungen
 loMenuAiStyleCommand = KI: \u00dcberarbeite Absatz stilistisch
 loMenuAiReformulateCommand = KI: Formuliere Absatz um
 loMenuAiExpandCommand = KI: Erweitere Absatz
+loMenuAiSynnomsOfWordCommand = KI: Synonyme f\u00fcr Wort
 loMenuAiSummaryCommand = KI: Erzeuge Zusammenfassung
 loMenuAiTranslateCommand = KI: \u00dcbersetze Dokument
 loMenuAiTextToSpeechCommand = KI: Dokument zu Sprache
 loMenuAiGeneralCommandTitle = Anweisungseingabe
 loMenuAiGeneralCommandMessage = Geben Sie einen beliebigen Befehl ein, um den Absatz zu bearbeiten
 loAiWaitDialogTitle = Bitte warten\u2026
-loAiWaitDialogMessage = Bitte warten Sie, bis die KI Ihre Anfrage bearbeitet hat.\nDies kann je nach Arbeitslast einige Zeit in Anspruch nehmen.
+loAiWaitDialogMessage = Bitte warten Sie, bis die KI Ihre Anfrage bearbeitet hat. \nDies kann je nach Arbeitslast einige Zeit in Anspruch nehmen.
 loAiRuleDescription = KI Fehler Erkennung
 loAiRuleMessage = Die KI schl\u00e4gt folgende Korrektur vor
 loAiRuleMessageOtherPunctuation = KI: falsches Satzzeichen
