--- a/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
+++ b/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
@@ -109,6 +109,7 @@ loMenuAiGeneralCommand = AI: General paragraph changes
 loMenuAiStyleCommand = AI: Revise paragraph stylistically
 loMenuAiReformulateCommand = AI: Reformulate paragraph
 loMenuAiExpandCommand = AI: Expand paragraph
+loMenuAiSynnomsOfWordCommand = AI: Synonyms of word
 loMenuAiTranslateCommand = AI: Translate document
 loMenuAiSummaryCommand = AI: Summarize
 loMenuAiTextToSpeechCommand = AI: document to speech
