--- a/src/main/resources/org/writingtool/hu/MessagesBundle_hu.properties
+++ b/src/main/resources/org/writingtool/hu/MessagesBundle_hu.properties
@@ -109,6 +109,7 @@ loMenuAiGeneralCommand = Mesterséges intelligencia: Általános bekezdésmódos
 loMenuAiStyleCommand = Mesterséges intelligencia: Bekezdés stilisztikai átdolgozása
 loMenuAiReformulateCommand = Mesterséges intelligencia: Bekezdés újrafogalmazása
 loMenuAiExpandCommand = Mesterséges intelligencia: Bekezdés kibontása
+loMenuAiSynnomsOfWordCommand = AI: Synonyms of word
 loMenuAiSummaryCommand = AI: Summarize
 loMenuAiTranslateCommand = Mesterséges intelligencia: Dokumentum fordítása
 loMenuAiTextToSpeechCommand = Mesterséges intelligencia: Dokumentum beszédbe alakítása
