add AI buttons to sidebar

--- a/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
+++ b/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
@@ -167,7 +167,7 @@ loAiTranslationDialogTitle = AI Translation
 loAiDialogLanguageLabel = Translate into
 loAiDialogTranslateButton = Translate
 loAiDialogTranslateFreedom = Freedom of translation
-
+loAiDialogTranslateFileError = Please save the document before translating
 guiUColorStyleLabel = Underline style and color:
 guiUColorChange = Change
 guiUColorDefault = Default
