--- a/src/main/resources/org/writingtool/hu/MessagesBundle_hu.properties
+++ b/src/main/resources/org/writingtool/hu/MessagesBundle_hu.properties
@@ -167,7 +167,7 @@ loAiTranslationDialogTitle = AI-fordítás
 loAiDialogLanguageLabel = Fordítás nyelvre:
 loAiDialogTranslateButton = Fordítás
 loAiDialogTranslateFreedom = A fordítás szabadsága
-
+loAiDialogTranslateFileError = Please save the document before translating
 guiUColorStyleLabel = Aláhúzott stílus és szín:
 guiUColorChange = Változás
 guiUColorDefault = Alapértelmezett
