--- a/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
+++ b/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
@@ -170,7 +170,7 @@ loAiTranslationDialogTitle = KI \u00dcbersetzung
 loAiDialogLanguageLabel = \u00dcbersetzen in
 loAiDialogTranslateButton = \u00dcbersetzen
 loAiDialogTranslateFreedom = Freiheit der \u00dcbersetzung
-
+loAiDialogTranslateFileError = Das Dokument bitte vor der \u00dcbersetzung speichern
 guiUColorStyleLabel = Farbe und Stil f\u00fcr Unterstreichungen:
 guiUColorChange = \u00c4ndern\u2026
 guiUColorDefault = Standard
