translation added to AI general dialog

--- a/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
+++ b/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
@@ -130,9 +130,11 @@ loAiRuleMessageWordConfusion = KI: Wortverwechselung
 loAiRuleMessageMisspelling = KI: Rechtschreibfehler
 loAiDialogTitle = KI Dialog
 loAiDialogTabParagraph = Absatzbearbeitung
+loAiDialogTabTranslation = \u00dcbersetzung
 loAiDialogTabInstruction = Direkte Anweisung
 loAiDialogInstructionLabel = Anweisung
 loAiDialogParagraphLabel = Zu bearbeitender Text
+loAiDialogTranslateLabel = Zu übersetzender Text
 loAiDialogResultLabel = KI: generierter Text
 loAiDialogResultLabelGrammar = KI: grammatisch überarbeiteter Text
 loAiDialogResultLabelStyle = KI: stilistisch überarbeiteter Text
