--- a/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
+++ b/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
@@ -127,9 +127,11 @@ loAiRuleMessageWordConfusion = AI: word confusion
 loAiRuleMessageMisspelling = AI: misspelling
 loAiDialogTitle = AI Dialog
 loAiDialogTabParagraph = Paragraph editing
+loAiDialogTabTranslation = Translation
 loAiDialogTabInstruction = Direct instruction
 loAiDialogInstructionLabel = Instruction
 loAiDialogParagraphLabel = Text to be edited
+loAiDialogTranslateLabel = Text to be translated
 loAiDialogResultLabel = AI: Generated text
 loAiDialogResultLabelGrammar = AI: Grammatically revised text
 loAiDialogResultLabelStyle = AI: Stylistically revised text
