--- a/src/main/resources/org/writingtool/hu/MessagesBundle_hu.properties
+++ b/src/main/resources/org/writingtool/hu/MessagesBundle_hu.properties
@@ -127,9 +127,11 @@ loAiRuleMessageWordConfusion = AI: word confusion
 loAiRuleMessageMisspelling = AI: misspelling
 loAiDialogTitle = Mesterséges intelligencia párbeszéd
 loAiDialogTabParagraph = Bekezdésszerkesztés
+loAiDialogTabTranslation = Translation
 loAiDialogTabInstruction = Közvetlen utasítás
 loAiDialogInstructionLabel = Utasítás
 loAiDialogParagraphLabel = Szerkesztendő szöveg
+loAiDialogTranslateLabel = Text to be translated
 loAiDialogResultLabel = Mesterséges intelligencia által generált szöveg
 loAiDialogResultLabelGrammar = AI: Grammatically revised text
 loAiDialogResultLabelStyle = AI: Stylistically revised text
