Show status in sidebar

--- a/src/main/resources/org/writingtool/hu/MessagesBundle_hu.properties
+++ b/src/main/resources/org/writingtool/hu/MessagesBundle_hu.properties
@@ -265,6 +265,7 @@ loDialogAutoCorrectButtonHelp = A dokumentumban szereplő összes hibásan írt 
 loDialogHelpText = A helyesírás- és nyelvhelyesség-ellenőrző párbeszédpanel a LibreOffice/OpenOffice helyesírás-ellenőrzőjét, valamint a Nyelveszköz nyelvhelyesség- és stílusellenőrzőjét használja.\nHa a párbeszédpanel egyes elemeihez szeretne segítséget kérni, vigye az egérmutatót a kérdéses elem fölé.
 loDialogErrorCloseMessage = Belső hiba történt.\nA Nyelveszköz helyesírás- és nyelvhelyesség-ellenőrző párbeszédablak bezárul.\nKérjük, próbálja meg újra.
 loDialogCacheLabel = Gyorsítótár állapota
+loDialogAiCacheLabel = AI cache status
 loDialogDoNotCheck = Ellenőrzés kihagyása
 loCheckStatusInitialization = Inicializálás
 loCheckStatusCheck = Ellenőrzés
