--- a/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
+++ b/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
@@ -264,7 +264,8 @@ loDialogChangeAllButtonHelp = For spelling errors only:\nChanges all misspelled 
 loDialogAutoCorrectButtonHelp = Changes all misspelled words in the document to the selected suggestion.\nAdd word-suggestion-pair to autoCorrect.
 loDialogHelpText = The spell and grammar check dialog uses the LibreOffice/OpenOffice spell check and the grammar and style check of LanguageTool.\nTo get help for single elements of the dialog, move the mouse cursor over the element in question.
 loDialogErrorCloseMessage = An internal error has occurred.\nThe LT spell and grammar check dialog will be closed.\nPlease try it again. 
-loDialogCacheLabel = Cache status
+loDialogCacheLabel = Text cache status
+loDialogAiCacheLabel = AI cache status
 loDialogDoNotCheck = Don't check
 loCheckStatusInitialization = Initialization
 loCheckStatusCheck = Check
