add fixed instructions and load chapter text button to AI dialog

--- a/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
+++ b/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
@@ -147,6 +147,7 @@ loAiDialogCreativityLabel = KI Kreativit\u00e4t (temperature * 100)
 loAiDialogExecuteButton = F\u00fchre Anweisung aus
 loAiDialogcopyResultButton = Kopiere Ergebnis
 loAiDialogResetButton = Zur\u00fccksetzen
+loAiDialogChapterButton = Letzte Abs\u00e4tze
 loAiDialogClearButton = Text l\u00f6schen
 loAiDialogUndoButton = R\u00fcckg\u00e4ngig
 loAiDialogCreateImageButton = Erzeuge Bild
