--- a/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
+++ b/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
@@ -144,6 +144,7 @@ loAiDialogCreativityLabel = AI Creativity (temperature * 100)
 loAiDialogExecuteButton = Execute instruction
 loAiDialogcopyResultButton = Copy Result
 loAiDialogResetButton = Reset
+loAiDialogChapterButton = Last Paragraphs
 loAiDialogClearButton = Delete text
 loAiDialogUndoButton = Undo
 loAiDialogCreateImageButton = Create Image
