--- a/src/main/resources/org/writingtool/hu/MessagesBundle_hu.properties
+++ b/src/main/resources/org/writingtool/hu/MessagesBundle_hu.properties
@@ -144,6 +144,7 @@ loAiDialogCreativityLabel = Mesterséges intelligencia kreativitás (hőmérsék
 loAiDialogExecuteButton = Utasítás végrehajtása
 loAiDialogcopyResultButton = Eredmény másolása
 loAiDialogResetButton = Visszaállítás
+loAiDialogChapterButton = Last Paragraphs
 loAiDialogClearButton = Szöveg törlése
 loAiDialogUndoButton = Visszavonás
 loAiDialogCreateImageButton = Kép létrehozása
