test and automatic switch of LO settings to WT needed settings / new handling of no background check (not completed)

--- a/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
+++ b/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
@@ -304,4 +304,5 @@ loStatisticalAnalysisEntireDocument = Ganzes Dokument
 loStatisticalAnalysisNotAnalyzed = Nicht analysiert
 loStatisticalAnalysisNumber = Anzahl
 loSidebarParagraphLabel = Aktueller Absatz (Treffer in [])
+loEnableLoDefaultSettingsMessage = Die Einstellungen von LibreOffice und WritingTool stimmten nicht überein.\nDie LibreOffice-Einstellungen wurden auf die Standardeinstellungen von WritingTool geändert.\n\nBitte benutzen Sie künftig die WritingTool-Einstellungen,\nsollten Sie keine Grammatikprüfung im Hintergrund oder keine WritingTool Rechtschreibprüfung wünschen.\n\nLibreOffice muss nun neu gestartet werden.
 crh = Krimtatar
