--- a/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
+++ b/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
@@ -299,4 +299,5 @@ loStatisticalAnalysisEntireDocument = Entire document
 loStatisticalAnalysisNotAnalyzed = Not analyzed
 loStatisticalAnalysisNumber = Number
 loSidebarParagraphLabel = Current Paragraph (Matches in [])
+loEnableLoDefaultSettingsMessage = The LibreOffice and WritingTool settings did not match.\nThe LibreOffice settings have been set to the WritingTool default settings.\n\nPlease use the WritingTool settings in the future\nif you do not want the background grammar checker or the WritingTool spell checker.\n\nLibreOffice must now be restarted.
 crh = Crimean Tatar
